--- a/package.json
+++ b/package.json
@@ -3,22 +3,6 @@
   "version": "0.0.2",
   "description": "a tool to generate pegboard skin",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-cache": "^0.2.8",
-    "gulp-rename": "^1.2.0",
-    "gulp-minify-css": "^1.0.0",
-    "del": "^1.1.1",
-    "gulp-jshint": "^1.9.4",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-uglify": "^1.1.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-notify": "^2.2.0"
-  },
-  "devDependencies": {
-    "gulp-minify-css": "^1.0.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,5 +15,24 @@
   "bugs": {
     "url": "https://github.com/stagfoo/maxconnect-gulp/issues"
   },
-  "homepage": "https://github.com/stagfoo/maxconnect-gulp"
+  "homepage": "https://github.com/stagfoo/maxconnect-gulp",
+  "devDependencies": {},
+  "dependencies": {
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-arialinter": "^0.0.1",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-cache": "^0.2.8",
+    "gulp-concat": "^2.5.2",
+    "gulp-file-include": "^0.8.0",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-jshint": "^1.9.4",
+    "gulp-less": "^3.0.2",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.1.0",
+    "imagemin-jpegtran": "^4.1.0",
+    "imagemin-pngquant": "^4.0.0",
+    "main-bower-files": "^2.6.2"
+  }
 }
