--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/stagfoo/maxconnect-gulp/issues"
   },
   "homepage": "https://github.com/stagfoo/maxconnect-gulp",
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-w3cjs": "^0.3.0"
+  },
   "dependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.11",
@@ -31,6 +33,8 @@
     "gulp-minify-css": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.1.0",
+    "gulp-w3cjs": "*",
+    "through2": "*",
     "imagemin-jpegtran": "^4.1.0",
     "imagemin-pngquant": "^4.0.0",
     "main-bower-files": "^2.6.2"
