Added Cache / Created separate cleaner classes (clean / clear cache if needed) - Added additional dependencies (cache, remember, changed)

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "through2": "*",
     "imagemin-jpegtran": "^4.1.0",
     "imagemin-pngquant": "^4.0.0",
-    "main-bower-files": "^2.6.2"
+    "main-bower-files": "^2.6.2",
+    "gulp-cache": "^0.2.8",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-changed": "^1.2.1"
   }
 }
